# BandB

./: .gitignore  BandB.sln  BandB.vcxproj  BandB.vcxproj.filters  CMakeLists.txt  core.h  instance.cpp  instance.h  main.cpp  milp.cpp  milp.h  node.h  run.py  solver.cpp  solver.h  utils.cpp  utils.h
common/: utils.cpp  utils.h
generator/: instance.cpp  instance.h
solver/: core.cpp  core.h  node.h  solution.cpp  solution.h  solver.cpp  solver.h  upper_bound.cpp  upper_bound.h
